--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -27,7 +27,7 @@ body  {
 
     h3 {
         font-size: 2rem;
-        line-height: 1;
+        line-height: 1.25;
         margin: 0 0 1rem;
     }
 
